Simplified CSS - Fixed Header Alignment

--- a/resources/style.css
+++ b/resources/style.css
@@ -12,6 +12,7 @@ html {
 
 body {
     margin: 0px 0px 0px 0px;
+    padding: 0px 0px 0px 0px;
 }
 
 header {
@@ -28,7 +29,11 @@ li {
 /* General ID CSS */
 
 #titleText {
-
+    font-weight: bolder;
+    font-size: 32px;
+    color: darkslategray;
+    margin-top: 16px;
+    margin-bottom: 16px;
 }
 
 
@@ -44,7 +49,7 @@ li {
     width: 100%;
     display: inline-flex;
     margin: 0px 0px 0px 0px;
-    padding-left: 24px;
+    padding-left: 0px;
 }
 
 .headerBox {
@@ -52,26 +57,28 @@ li {
     display: flex;
     align-items: center;
     justify-content: center;
+    padding-left: 24px;
+    padding-right: 24px;
 }
 
 .boxContainer {
     display: flex;
     width: 100%;
-
 }
 
 #headerLeft {
     justify-content: flex-start;
     align-items: center;
     align-content: center;
+    width: 100%;
 }
 
 #headerRight {
     justify-content: flex-end;
     align-items: center;
     align-content: center;
-    padding-right: 48px;
     gap: 16px;
+    width: 100%;
 }
 
 #colmarIcon {
@@ -111,14 +118,6 @@ li {
     padding-top: 32px;
     padding-bottom: 32px;
     padding-left: 5px;
-}
-
-#learnSomething {
-    font-weight: bolder;
-    font-size: 32px;
-    color: darkslategray;
-    margin-top: 16px;
-    margin-bottom: 16px;
 }
 
 #learnLorem {
@@ -243,6 +242,8 @@ li {
 }
 
 /* Start Learning Section CSS */
+
 #startLearningContainer {
-    padding: 32px 72px;
+    display: flex;
+    width: 100%;
 }
